Fix contrast

--- a/css/style.css
+++ b/css/style.css
@@ -240,7 +240,7 @@
 
 .cta-container {
   width: 80%;
-  background-color: var(--lightest_purple);
+  background-color: var(--orange);
   padding: 4rem 4rem;
 }
 
@@ -272,7 +272,10 @@
 .cta-form button {
   font-size: 1.6rem;
   font-family: inherit;
+  font-weight: bold;
   height: 4rem;
+  color: var(--lightest_purple);
+  background-color: var(--purple);
 }
 
 .cta-form input,
